# libANN

./: .ANN_config.h.swp  .swp  CMakeLists.txt  README
.deps/: ANN_ffnetwork.Plo  ANN_layer.Plo
include/: .ANN_config.h.in.swp  .ANN_config.h.swp  .ANN_main.h.swp  ANN_config.h  ANN_config.h.in  ANN_ffnetwork.h  ANN_layer.h  ANN_main.h  CMakeLists.txt
src/: .ANN_ffnetwork.c.swn  .ANN_ffnetwork.c.swo  .ANN_layer.c.swp  ANN_ffnetwork.c  ANN_layer.c  CMakeLists.txt
src/.deps/: ANN_ffnetwork.Plo  ANN_layer.Plo
src/.libs/: libANN.lai  libANN.so.0.0.0
